feat: add profile image, resume download, Earth & Clay theme, favicon, and claude.md
- Add profile photo to hero (circle) and about sections with proper alignment
- Implement resume PDF download via bundled assets with web download helper
- Switch color palette from Neon Cosmos to Earth & Clay (terracotta + olive)
- Generate custom SU monogram favicon and update all PWA icons
- Update manifest.json with proper name, description, and theme colors
- Add claude.md project documentation for AI-assisted development
- Add web package dependency for download functionality

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "portflo",
-    "short_name": "portflo",
+    "name": "Syed Uzaif — Flutter Developer",
+    "short_name": "Syed Uzaif",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#0A0E17",
+    "theme_color": "#0A0E17",
+    "description": "Syed Uzaif — Flutter Developer building production apps with 10,000+ active users.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
