--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # Utilities
   url_launcher: ^6.2.0
   font_awesome_flutter: ^10.6.0
+  web: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -33,3 +34,4 @@ flutter:
     - assets/images/
     - assets/projects/
     - assets/icons/
+    - assets/resume/
